# terraform-lambda-rust-opentelemetry-xray-example

./: .gitignore  Cargo.toml  tasks
infra/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tf
