[package]
name = "rust-lambda-boilerplate"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = { version = "0.8.0", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8.0"
opentelemetry = { version = "0.19.0", features = ["trace", "rt-tokio"]}
opentelemetry-aws = "0.7.0"
opentelemetry-http = "0.8.0"
opentelemetry-otlp = "0.12.0"
# opentelemetry_api = "0.19.0"
# opentelemetry_sdk = "0.19.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
